# github-issue-analyzer

./: .env.example  .gitignore  README.md  database.db  main.py  pyproject.toml  requirements.txt
core/: config.py  database.py  logger.py  uvicorn_log_config.json
models/: __init__.py  issue.py  repo.py
routes/: analyze_route.py  scan_route.py
services/: analyze_service.py  scan_service.py
view/: index.html  styles.css
