[project]
name = "kusho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.128.0",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sqladmin>=0.22.0",
    "sqlalchemy-utils>=0.42.1",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
